動的にタブを生成

--- a/TestXamlReader.csproj
+++ b/TestXamlReader.csproj
@@ -4,10 +4,26 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Nullable>enable</Nullable>
+    <Copyright>by SHINTA</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
+    <Page Remove="Views\DynamicTabItem.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Views\DynamicTabItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LivetCask" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
